[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://UI/Layouts/DialogShell.gd" id="1"]
[ext_resource type="Script" path="res://UI/Widgets/ThemedLabel.gd" id="2"]

[node name="DialogShell" type="PanelContainer"]
anchors_preset = 15
anchor_bottom = 1.0
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Layout" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_bottom = 1.0
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderSlot" type="VBoxContainer" parent="Layout"]
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="Layout/HeaderSlot"]
size_flags_horizontal = 3
script = ExtResource("2")

[node name="DescriptionLabel" type="Label" parent="Layout/HeaderSlot"]
size_flags_horizontal = 3
visible = false
script = ExtResource("2")
label_fallback = ""
color_token = StringName("text_muted")

[node name="BodySlot" type="VBoxContainer" parent="Layout"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FooterSlot" type="HBoxContainer" parent="Layout"]
size_flags_horizontal = 3

[node name="ActionBar" type="HBoxContainer" parent="Layout/FooterSlot"]
size_flags_horizontal = 3
alignment = 2

